# SPR_Project_Unipi

./: CMakeLists.txt  MotionDetection.cpp  README.md  Res.md
